# recipe-book

./: Dockerfile  Makefile  README.md  Taskfile.yml  fly.toml  go.mod  go.sum  index.css  main.go  main.py  main.tf  pyproject.toml
api/: handlers.go  requesters.go  server.go
cmd/cli/: aws.go  main.go  start_tcp.go
cmd/web/: handlers.go  helpers.go  main.go  middleware.go  routes.go
cmd/web/views/: add_recipe.templ  add_recipe_templ.go  home.templ  home_templ.go  recipe.templ  recipe_templ.go
database/: database.go
internal/database/: database.go  database_test.go  file_getters.go  in_memory_database.go  sql_database.go
internal/database/migrations/: 1_init.sql  2_add_filecache_table.sql  README.md
internal/filesyncer/: file_cache.go  file_cache_test.go  message.go  message_test.go  syncer.go  syncer_integration_test.go  tcp_conn.go
internal/recipes/: markdown_parser.go  markdown_parser_test.go  recipes.go
internal/recipes/testdata/: example_recipe.md
internal/types/: types.go
internal/views/: add_recipe_templ.go  home.templ  home_templ.go  recipe.templ  recipe_templ.go
recipes/: markdown_parser.go  markdown_parser_test.go
static/: styles.css
static/recipe_mds/: template.md
storage/: storage.go  storage_test.go
templates/: home.html  search_results.html
types/: recipe_metadata.go  types.go
ui/static/css/: styles.css
views/: home.templ  home_templ.go
